// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sets submit button label to 'Save' when saving is false 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     Recipe
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="title"
    >
      Title
    </label>
    <div
      className="field"
    >
      <input
        className="form-control my-2"
        name="title"
        onChange={[MockFunction]}
        placeholder="Enter Recipe Title"
        type="text"
        value="Egusi Soup"
      />
    </div>
  </div>
  <div>
    <label
      htmlFor="authorId"
    >
      Author
    </label>
    <div
      className="field"
    >
      <select
        className="form-control my-2"
        name="authorId"
        onChange={[MockFunction]}
        value={3}
      >
        <option
          value=""
        >
          Select Author
        </option>
        <option
          value={1}
        >
          Dan Wilder
        </option>
        <option
          value={2}
        >
          Oprah Winphrey
        </option>
        <option
          value={3}
        >
          Father Abraham
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="category"
    >
      Category
    </label>
    <div
      className="field"
    >
      <input
        className="form-control my-2"
        name="category"
        onChange={[MockFunction]}
        placeholder="Enter Category"
        type="text"
        value="Soup"
      />
    </div>
  </div>
  <button
    className="btn btn-primary mt-3"
    disabled={false}
    type="submit"
  >
    Save
  </button>
</form>
`;

exports[`sets submit button label to 'Saving...' when saving is true 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     Recipe
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="title"
    >
      Title
    </label>
    <div
      className="field"
    >
      <input
        className="form-control my-2"
        name="title"
        onChange={[MockFunction]}
        placeholder="Enter Recipe Title"
        type="text"
        value="Grilled fish sticks"
      />
    </div>
  </div>
  <div>
    <label
      htmlFor="authorId"
    >
      Author
    </label>
    <div
      className="field"
    >
      <select
        className="form-control my-2"
        name="authorId"
        onChange={[MockFunction]}
        value={1}
      >
        <option
          value=""
        >
          Select Author
        </option>
        <option
          value={1}
        >
          Dan Wilder
        </option>
        <option
          value={2}
        >
          Oprah Winphrey
        </option>
        <option
          value={3}
        >
          Father Abraham
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="category"
    >
      Category
    </label>
    <div
      className="field"
    >
      <input
        className="form-control my-2"
        name="category"
        onChange={[MockFunction]}
        placeholder="Enter Category"
        type="text"
        value="Fish"
      />
    </div>
  </div>
  <button
    className="btn btn-primary mt-3"
    disabled={true}
    type="submit"
  >
    Saving...
  </button>
</form>
`;
